<resources>
    <string name="app_name">Golnoor Airport Apron Lighting Control</string>
    <string name="setup_phone_number">شماره تلفن</string>
    <string name="setup_save">ذخیره</string>
    <string name="setup_confirm">تایید</string>
    <string name="setup_otp">رمز یکبار مصرف</string>
    <string name="setup_otpWrongPasscode">رمز وارد شده اشتباه است</string>
    <string name="login_confirm">تایید</string>
    <string name="setup_next">بعدی</string>
    <string name="setup_error">تمامی فیلدها را پر کنید</string>
    <string name="login_passcode">رمز ورود</string>
    <string name="login_login">ورود</string>
    <string name="login_wrongPasscode">رمز عبور صحیح نیست</string>
    <string name="setup_passcode">رمز عبور</string>
    <string name="control_tower">Tower %d</string>
    <string name="control_send">ارسال</string>
    <string name="control_sent">ارسال پیام با موفقیت انجام شد. برای ارسال مجدد %s ثانیه منتظر بمانید</string>
    <string name="control_sms_permission_error">برای ارسال پیام نیاز به صدور اجازه دسترسی است.</string>
    <string name="control_newTowers">New Towers</string>
    <string name="control_oldTowers">Old Towers</string>
    <string name="control_allOn">All ON</string>
    <string name="control_allOff">All OFF</string>
    <string name="setup_title">ثبت تنظیمات</string>
    <string name="sms_sending">در حال ارسال مشخصات …</string>
    <string name="sms_sendingFailed">ارسال پیام با مشکل مواجه شد!</string>
    <string name="about_description">این برنامه همراه با سیستم کنترل مرتبط، جهت کنترل روشنایی اپرون فرودگاه توسط واحد IOT شرکت گلنور طراحی و پیاده سازی گردیده است.</string>
    <string name="about_websiteLabel">وبسایت</string>
    <string name="about_website">www.Golnoor.com</string>
    <string name="about_email">RD7@golnoor.com</string>
    <string name="about_emailLabel">تماس با پشتیبانی</string>
</resources>
