<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/img_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/passcode"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ir.majj.golnour_client.elegantviews.ElegantEditText
        android:id="@+id/passcode"
        style="@style/Input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="right"
        android:hint="@string/login_passcode"
        android:imeActionLabel="@string/login_confirm"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintLeft_toRightOf="@id/logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ir.majj.golnour_client.elegantviews.ElegantButton
        android:id="@+id/login"
        style="@style/NormalButton"
        android:layout_width="wrap_content"
        android:text="@string/login_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passcode" />

</androidx.constraintlayout.widget.ConstraintLayout>
